=head1 NAME

Bric::Changes - Bricolage Changes

=head1 VERSION

$LastChangedRevision$

=head1 DATE

$LastChangedDate$

=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.10.1 ()

=head2 New Features

=over

=item *

Added a guide on how to profile Mason templates. See
F<contrib/template_profiling>. [Scott]

=item *

ContribType and Destinations SOAP modules. [Scott]

=back

=head2 Improvements

=over

=item *

When a story is previewed, any related media are distributed to the preview
server only if the C<AUTO_PREVIEW_MEDIA> F<bricolage.conf> directive is
disabled or the media documents need to be previewed. [David]

=item *

Removed call to removed component F<comp/widgets/qa/qa.mc> from the side
navigation component. This was only an issue when the C<QA_MODE>
F<bricolage.conf> directive was enabled. Reported by Derek Poon. [David]

=item *

Fixed the typo "Distribintion" in the side navigation. Thanks to Christian
Niles for the spot. [David]

=item *

Added installation defaults for FreeBSD that will be used when the
C<USE_DEFAULTS> environment variable is set to "freebsd" during installation.
[Rod Taylor]

=item *

Fixed some errors in and rearranged the SOAP schema in
L<Bric::SOAP|Bric::SOAP>. [Christian Niles]

=item *

Fixed a foreign key constraint on "media_element.related_story__id" that was
pointing to media.id instead of story.id. Reported by Rod Taylor. [David]

=item *

Added a 'make devclone' option which does the same as 'make clone' but removes
all of the locally previewed files, the obj files, staging and sandboxes. This
means a large saving in download size of cloned production systems. [Paul
Orrock]

=item *

Added C<ALLOW_URIS_WITHOUT_CATEGORIES> F<bricolage.conf> directive to turn off
check for "%{categories}" in an output channel URI format. This directive
should be used with caution since this is not the recommended behaviour. [Paul
Orrock]

=item *
