@@ -27,7 +27,7 @@ F<contrib/template_profiling>. [Scott]
 
 =item *
 
-ContribType and Destinations SOAP modules. [Scott]
+ContribType and Destination SOAP modules. [Scott]
 
 =back
 
@@ -197,6 +197,12 @@ Desk pagination is now properly styled. [David]
 =item *
 
 Assets can once again be properly deleted from desks. [David]
+
+=item *
+
+Cancelling the checkout of an media document now deletes any new file that has
+been uploaded and, if the C<AUTO_PREVIEW_MEDIA> F<bricolage.conf> directive is
+enabled, re-previews the previous version of the media file. [David]
 
 =back
 
